@@ -20,7 +20,6 @@ import org.springframework.data.domain.Pageable;
 import com.nk.schedular.constants.ApiConstants;
 import com.nk.schedular.constants.Testconstants;
 import com.nk.schedular.dto.ScheduleDTO;
-import com.nk.schedular.dto.ScheduleRequest;
 import com.nk.schedular.dto.TaskDTO;
 import com.nk.schedular.dto.TaskList;
 import com.nk.schedular.dto.TaskRequest;
@@ -59,7 +58,7 @@ class TaskServiceTest {
                                 .taskId("taskId")
                                 .description("description")
                                 .isSchedularEnabled(false)
-                                .schedule(ScheduleRequest.builder().build())
+                                .schedule("scheduleId")
                                 .build();
 
                 taskWithNullID = TaskRequest.builder()
@@ -67,20 +66,22 @@ class TaskServiceTest {
                                 .taskId("taskId")
                                 .description("description")
                                 .isSchedularEnabled(false)
-                                .schedule(ScheduleRequest.builder().build())
+                                .schedule("scheduleId")
                                 .build();
                 taskWithPstvID = TaskRequest.builder()
                                 .id(1L)
                                 .taskId("taskId")
                                 .description("description")
                                 .isSchedularEnabled(false)
-                                .schedule(ScheduleRequest.builder().build())
+                                .schedule("scheduleId")
                                 .build();
                 expectedResult = TaskDTO.builder()
                                 .id(0L)
                                 .description("description")
+                                .taskId("taskId")
                                 .isSchedularEnabled(false)
                                 .schedule(ScheduleDTO.builder()
+                                .scheduleId("scheduleId")
                                                 .createdBy(0L)
                                                 .createdAt(Testconstants.DEFAULT_DATETIME)
                                                 .lastUpdatedBy(0L)
@@ -102,6 +103,7 @@ class TaskServiceTest {
                 taskListExpectedResult = TaskList.builder()
                                 .tasks(List.of(TaskDTO.builder()
                                                 .id(0L)
+                                                .taskId("taskId")
                                                 .description("description")
                                                 .isSchedularEnabled(false)
                                                 .schedule(ScheduleDTO.builder()
@@ -118,7 +120,7 @@ class TaskServiceTest {
                                 .totalPages(1)
                                 .total(1L)
                                 .sortOrder(SortOrder.ASC)
-                                .sortBy(TaskShortBy.NAME)
+                                .sortBy(TaskShortBy.CREATED_AT)
                                 .build();
 
         }
@@ -135,7 +137,7 @@ class TaskServiceTest {
                                 .lastUpdatedBy(0L)
                                 .lastUpdatedAt(Testconstants.DEFAULT_DATETIME)
                                 .build();
-                when(mockScheduleService.findOrCreateSchedule(any())).thenReturn(schedule);
+                when(mockScheduleService.getScheduleWithScheduleID(any())).thenReturn(schedule);
                  // Configure ScheduleService.mapScheduleToDTO(...).
                  final ScheduleDTO scheduleDTO = ScheduleDTO.builder()
                                  .createdBy(0L)
@@ -164,7 +166,7 @@ class TaskServiceTest {
                 assertThat(result.getId()).isEqualTo(expectedResult.getId());
                 assertThat(result.getDescription()).isEqualTo(expectedResult.getDescription());
                 assertThat(result.getIsSchedularEnabled()).isEqualTo(expectedResult.getIsSchedularEnabled());
-                assertScheduleDTO(result.getSchedule(), expectedResult.getSchedule());
+                assertThat(result.getSchedule()).isEqualTo( expectedResult.getSchedule());
                 assertThat(result.getCreatedBy()).isEqualTo(expectedResult.getCreatedBy());
                 assertThat(result.getCreatedAt()).isNotNull();
                 assertThat(result.getLastUpdatedBy()).isEqualTo(expectedResult.getLastUpdatedBy());
@@ -186,11 +188,12 @@ class TaskServiceTest {
                 // Configure ScheduleService.findOrCreateSchedule(...).
                 final Schedule schedule = Schedule.builder()
                                 .createdBy(0L)
+                                .scheduleId("scheduleId")
                                 .createdAt(Testconstants.DEFAULT_DATETIME)
                                 .lastUpdatedBy(0L)
                                 .lastUpdatedAt(Testconstants.DEFAULT_DATETIME)
                                 .build();
-                when(mockScheduleService.findOrCreateSchedule(ScheduleRequest.builder().build())).thenReturn(schedule);
+                when(mockScheduleService.getScheduleWithScheduleID(any())).thenReturn(schedule);
 
                 // Configure TaskRepo.save(...).
                 when(mockTaskRepo.existsByTaskId("taskId")).thenReturn(false);
@@ -198,12 +201,14 @@ class TaskServiceTest {
                 // Configure ScheduleService.mapScheduleToDTO(...).
                 final ScheduleDTO scheduleDTO = ScheduleDTO.builder()
                                 .createdBy(0L)
+                                .scheduleId("scheduleId")
                                 .createdAt(Testconstants.DEFAULT_DATETIME)
                                 .lastUpdatedBy(0L)
                                 .lastUpdatedAt(Testconstants.DEFAULT_DATETIME)
                                 .build();
                 when(mockScheduleService.mapScheduleToDTO(Schedule.builder()
                                 .createdBy(0L)
+                                .scheduleId("scheduleId")
                                 .createdAt(Testconstants.DEFAULT_DATETIME)
                                 .lastUpdatedBy(0L)
                                 .lastUpdatedAt(Testconstants.DEFAULT_DATETIME)
@@ -243,6 +248,7 @@ class TaskServiceTest {
                                 .isSchedularEnabled(false)
                                 .schedule(Schedule.builder()
                                                 .createdBy(0L)
+                                                .scheduleId("scheduleId")
                                                 .createdAt(Testconstants.DEFAULT_DATETIME)
                                                 .lastUpdatedBy(0L)
                                                 .lastUpdatedAt(Testconstants.DEFAULT_DATETIME)
@@ -258,11 +264,13 @@ class TaskServiceTest {
                 final ScheduleDTO scheduleDTO = ScheduleDTO.builder()
                                 .createdBy(0L)
                                 .createdAt(Testconstants.DEFAULT_DATETIME)
+                                .scheduleId("scheduleId")
                                 .lastUpdatedBy(0L)
                                 .lastUpdatedAt(Testconstants.DEFAULT_DATETIME)
                                 .build();
                 when(mockScheduleService.mapScheduleToDTO(Schedule.builder()
                                 .createdBy(0L)
+                                .scheduleId("scheduleId")
                                 .createdAt(Testconstants.DEFAULT_DATETIME)
                                 .lastUpdatedBy(0L)
                                 .lastUpdatedAt(Testconstants.DEFAULT_DATETIME)
@@ -311,7 +319,7 @@ class TaskServiceTest {
                                 .lastUpdatedBy(0L)
                                 .lastUpdatedAt(Testconstants.DEFAULT_DATETIME)
                                 .build();
-                when(mockScheduleService.findOrCreateSchedule(ScheduleRequest.builder().build())).thenReturn(schedule);
+                when(mockScheduleService.getScheduleWithScheduleID(any())).thenReturn(schedule);
 
                 // Configure TaskRepo.save(...).
                 when(mockTaskRepo.existsById(1L)).thenReturn(true);
@@ -435,7 +443,7 @@ class TaskServiceTest {
                 // Run the test
                 final TaskList result = taskServiceUnderTest.getTaskByTaskIds(List.of("value"),
                                 ApiConstants.DEFAULT_PAGE, ApiConstants.DEFAULT_PAGE_SIZE, SortOrder.ASC,
-                                TaskShortBy.NAME);
+                                TaskShortBy.CREATED_AT);
 
                 // Verify the results
                 assertThat(result).isEqualTo(taskListExpectedResult);
@@ -481,7 +489,7 @@ class TaskServiceTest {
                 // Run the test
                 final TaskList result = taskServiceUnderTest.getTaskByTaskIds(List.of("value"), null,
                                 ApiConstants.DEFAULT_PAGE_SIZE, SortOrder.ASC,
-                                TaskShortBy.NAME);
+                                TaskShortBy.CREATED_AT);
 
                 // Verify the results
                 assertThat(result).isEqualTo(taskListExpectedResult);
@@ -527,7 +535,7 @@ class TaskServiceTest {
                 // Run the test
                 final TaskList result = taskServiceUnderTest.getTaskByTaskIds(List.of("value"),
                                 ApiConstants.DEFAULT_PAGE, null, SortOrder.ASC,
-                                TaskShortBy.NAME);
+                                TaskShortBy.CREATED_AT);
 
                 // Verify the results
                 assertThat(result).isEqualTo(taskListExpectedResult);
@@ -556,7 +564,7 @@ class TaskServiceTest {
                 List<String> taskIds = List.of("value");
                 // Run the test
                 assertThatThrownBy(() -> taskServiceUnderTest.getTaskByTaskIds(taskIds, null, null, null,
-                                TaskShortBy.NAME)).isInstanceOf(BadRequestException.class)
+                                TaskShortBy.CREATED_AT)).isInstanceOf(BadRequestException.class)
                                 .hasMessageContaining("nvalid sort parameter: null. Must be 'ASC' or 'DESC'.");
 
         }
@@ -588,12 +596,12 @@ class TaskServiceTest {
                 List<String> taskIds = List.of("value");
                 // Configure ScheduleService.mapScheduleToDTO(...).
                 when(mockTaskRepo.findAllTaskWithTaskIds(any(Pageable.class), eq(taskIds)))
-                                .thenReturn(new PageImpl<>(Collections.emptyList()));
+                                .thenReturn(new PageImpl<>(List.of(DemoTask.builder().build())));
 
                 // Run the test
                 assertThatThrownBy(() -> taskServiceUnderTest.getTaskByTaskIds(taskIds, 2,
                                 ApiConstants.DEFAULT_PAGE_SIZE, SortOrder.DESC,
-                                TaskShortBy.NAME)).isInstanceOf(BadRequestException.class);
+                                TaskShortBy.CREATED_AT)).isInstanceOf(BadRequestException.class);
 
         }
 
@@ -608,7 +616,7 @@ class TaskServiceTest {
                 // Run the test
                 assertThatThrownBy(() -> taskServiceUnderTest.getTaskByTaskIds(taskIds, 2,
                                 ApiConstants.DEFAULT_PAGE_SIZE, SortOrder.ASC,
-                                TaskShortBy.NAME)).isInstanceOf(InternalServerException.class);
+                                TaskShortBy.CREATED_AT)).isInstanceOf(InternalServerException.class);
         }
 
         @Test
@@ -649,7 +657,7 @@ class TaskServiceTest {
 
                 // Run the test
                 final TaskList result = taskServiceUnderTest.getAllTask(ApiConstants.DEFAULT_PAGE,
-                                ApiConstants.DEFAULT_PAGE_SIZE, SortOrder.ASC, TaskShortBy.NAME);
+                                ApiConstants.DEFAULT_PAGE_SIZE, SortOrder.ASC, TaskShortBy.CREATED_AT);
 
                 // Verify the results
                 assertThat(result).isEqualTo(taskListExpectedResult);
@@ -662,7 +670,7 @@ class TaskServiceTest {
 
                 // Configure ScheduleService.mapScheduleToDTO(...).
                 // Run the test
-                final TaskList result = taskServiceUnderTest.getAllTask(null, 1, SortOrder.ASC, TaskShortBy.NAME);
+                final TaskList result = taskServiceUnderTest.getAllTask(null, 1, SortOrder.ASC, TaskShortBy.CREATED_AT);
 
                 // Verify the results
                 assertThat(result).isEqualTo(nullTaskListExpectedResult);
@@ -678,7 +686,7 @@ class TaskServiceTest {
                 // Run the test
                 assertThatThrownBy(
                                 () -> taskServiceUnderTest.getAllTask(2, ApiConstants.DEFAULT_PAGE_SIZE, SortOrder.ASC,
-                                                TaskShortBy.NAME))
+                                                TaskShortBy.CREATED_AT))
                                 .isInstanceOf(InternalServerException.class);
         }
 
@@ -689,7 +697,7 @@ class TaskServiceTest {
 
                 // Run the test
                 assertThatThrownBy(() -> taskServiceUnderTest.getAllTask(2, ApiConstants.DEFAULT_PAGE_SIZE, null,
-                                TaskShortBy.NAME)).isInstanceOf(BadRequestException.class);
+                                TaskShortBy.CREATED_AT)).isInstanceOf(BadRequestException.class);
         }
 
         @Test
@@ -751,7 +759,7 @@ class TaskServiceTest {
 
                 // Run the test
                 final TaskList result = taskServiceUnderTest.getAllTaskBySchedule(1, null, SortOrder.ASC,
-                                TaskShortBy.NAME,
+                                TaskShortBy.CREATED_AT,
                                 "scheduleId");
 
                 // Verify the results
@@ -767,7 +775,7 @@ class TaskServiceTest {
                 // Configure ScheduleService.mapScheduleToDTO(...).
 
                 // Run the test
-                final TaskList result = taskServiceUnderTest.getAllTaskBySchedule(1, 1, SortOrder.ASC, TaskShortBy.NAME,
+                final TaskList result = taskServiceUnderTest.getAllTaskBySchedule(1, 1, SortOrder.ASC, TaskShortBy.CREATED_AT,
                                 "scheduleId");
 
                 // Verify the results
@@ -784,7 +792,7 @@ class TaskServiceTest {
                 // Run the test
                 assertThatThrownBy(() -> taskServiceUnderTest.getAllTaskBySchedule(2, ApiConstants.DEFAULT_PAGE_SIZE,
                                 SortOrder.ASC,
-                                TaskShortBy.NAME, "scheduleId")).isInstanceOf(InternalServerException.class);
+                                TaskShortBy.CREATED_AT, "scheduleId")).isInstanceOf(InternalServerException.class);
         }
 
         @Test
@@ -795,7 +803,7 @@ class TaskServiceTest {
                 // Run the test
                 assertThatThrownBy(
                                 () -> taskServiceUnderTest.getAllTaskBySchedule(2, ApiConstants.DEFAULT_PAGE_SIZE, null,
-                                                TaskShortBy.NAME, "scheduleId"))
+                                                TaskShortBy.CREATED_AT, "scheduleId"))
                                 .isInstanceOf(BadRequestException.class);
         }
 
@@ -859,7 +867,7 @@ class TaskServiceTest {
 
                 // Run the test
                 final TaskList result = taskServiceUnderTest.getAllTaskByCronExp(ApiConstants.DEFAULT_PAGE,
-                                ApiConstants.DEFAULT_PAGE_SIZE, SortOrder.ASC, TaskShortBy.NAME,
+                                ApiConstants.DEFAULT_PAGE_SIZE, SortOrder.ASC, TaskShortBy.CREATED_AT,
                                 "cronSchedule");
 
                 // Verify the results
@@ -875,7 +883,7 @@ class TaskServiceTest {
                 // Configure ScheduleService.mapScheduleToDTO(...).
 
                 // Run the test
-                final TaskList result = taskServiceUnderTest.getAllTaskByCronExp(1, 1, SortOrder.ASC, TaskShortBy.NAME,
+                final TaskList result = taskServiceUnderTest.getAllTaskByCronExp(1, 1, SortOrder.ASC, TaskShortBy.CREATED_AT,
                                 "cronSchedule");
 
                 // Verify the results
@@ -892,7 +900,7 @@ class TaskServiceTest {
                 // Run the test
                 assertThatThrownBy(() -> taskServiceUnderTest.getAllTaskByCronExp(2, ApiConstants.DEFAULT_PAGE_SIZE,
                                 SortOrder.ASC,
-                                TaskShortBy.NAME, "cronSchedule")).isInstanceOf(InternalServerException.class);
+                                TaskShortBy.CREATED_AT, "cronSchedule")).isInstanceOf(InternalServerException.class);
         }
 
         @Test
@@ -902,7 +910,7 @@ class TaskServiceTest {
                 // Run the test
                 assertThatThrownBy(
                                 () -> taskServiceUnderTest.getAllTaskByCronExp(2, ApiConstants.DEFAULT_PAGE_SIZE, null,
-                                                TaskShortBy.NAME, "cronSchedule"))
+                                                TaskShortBy.CREATED_AT, "cronSchedule"))
                                 .isInstanceOf(BadRequestException.class);
         }
 
